[tool.poetry]
name = "site-404-comparitor"
version = "0.1.0"
description = ""
authors = ["Michael Twomey <mick@twomeylee.name>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
httpx = "^0.19.0"
coloredlogs = "^15.0.1"
beautifulsoup4 = "^4.10.0"
furl = "^2.1.3"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
mypy = "^0.910"
ipython = "^7.28.0"
isort = "^5.9.3"
pre-commit = "^2.15.0"

[tool.poetry.scripts]
site-404-comparitor = 'site_404_comparitor.main:app'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
